# flappy-bevy

./: Cargo.toml  README.md  Trunk.toml
.cargo/: config.toml
assets/: background.ldtk
assets/background/: background.ldtkl  ground.ldtkl
launchers/native/: Cargo.toml
launchers/native/src/: main.rs
launchers/wasm/: Cargo.toml  index.html
launchers/wasm/src/: main.rs
src/: animations.rs  app_states.rs  assets.rs  camera.rs  consts.rs  events.rs  game.rs  lib.rs  main.rs  obstacles.rs  player.rs  ui.rs  world.rs
workspace/: background.ldtk
workspace/background/: background.ldtkl  ground.ldtkl  obstacle.ldtkl
