[package]
authors = ["Baptiste Velado"]
description = "A flappy bird clone made with bevy for learning purposes."
edition = "2021"
name = "flappy-bevy"
readme = "README.md"
version = "0.1.0"

[dependencies]
bevy = {version = "0.9.1", features = ["dynamic"]}
bevy_prototype_lyon = "0.7.2"
bevy_rapier2d = {version = "0.20.0", features = ["debug-render-2d"]}
bevy_turborand = "0.4"
iyes_loopless = "0.9.1"
