[package]
authors = ["Baptiste Velado"]
description = "A flappy bird clone made with bevy for learning purposes."
edition = "2021"
name = "flappy_bevy"
readme = "README.md"
resolver = "2"
version = "0.1.0"

[[bin]]
name = "native-launcher"
path = "launchers/native/src/main.rs"

[workspace]
members = [
  "launchers/wasm",
  "launchers/native",
]

# common dependencies
[dependencies]
bevy = "0.9.1"
bevy_rapier2d = "0.20.0"
bevy_turborand = "0.4.3"
iyes_loopless = "0.9.1"

[profile.dev.package.flappy_bevy]
opt-level = 0
[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true