[package]
edition = "2021"
name = "wasm"
version = "0.1.0"
workspace = "../.."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
console_error_panic_hook = "0.1"
flappy_bevy = {path = "../.."}
stylist = {version = "0.10.1", features = ["yew_integration"]}
web-sys = {version = "0.3.60", features = ["Document", "Window"]}
yew = "0.19.3"
